// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-basic Components BrandLogo should render smaller if isMobile is set 1`] = `
.c0 {
  display: block;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 0;
  border: 15px solid transparent;
  box-sizing: border-box;
  background: center / contain no-repeat url("http://testUrl");
  width: 100px;
  height: 64px;
}

<div
  className="c0"
/>
`;

exports[`ui-elements-basic Components BrandLogo should render with an img property 1`] = `
.c0 {
  display: block;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 0;
  border: 15px solid transparent;
  box-sizing: border-box;
  background: center / contain no-repeat url("http://tv.proximetry.com/assets/images/relayr_logo_white.png");
  width: 200px;
  height: 64px;
}

<div
  className="c0"
/>
`;

exports[`ui-elements-basic Components BrandLogo should render without an img property 1`] = `
.c0 {
  display: block;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 0;
  border: 15px solid transparent;
  box-sizing: border-box;
  background: center / contain no-repeat url("http://testUrl");
  width: 200px;
  height: 64px;
}

<div
  className="c0"
/>
`;
